GTK+-3.20 BlueSubmarine: fix scrollbar breakage from gtk+-3.19.11

--- a/desktop-themes/Blue-Submarine/gtk-3.0/mate-applications.css
+++ b/desktop-themes/Blue-Submarine/gtk-3.0/mate-applications.css
@@ -20,9 +20,12 @@
     background-color: shade (@theme_bg_color, 1.08);
 }
 
-.caja-side-pane scrolledwindow scrollbar.vertical.left trough,
-.caja-side-pane scrolledwindow scrollbar.horizontal.bottom trough {
-    border-style: none;
+/* to avoid overlap with eject buttons */
+.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator,
+.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator trough,
+.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator slider,
+.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator button {
+    min-width: 8px;
 }
 
 /* selected item in sidebar */
